# synthecene

./: .gitignore  Cargo.toml  LICENSE  README.md
acquisition/: Cargo.toml  README.md
acquisition/resources/prod/: news_domains.txt
acquisition/src/: broadcast.rs  crawler.rs  fetch.rs  lib.rs  protocol.proto  smarts.rs  state.rs  store.rs  task.rs  telemetry.rs
acquisition/src/fetch/: controller.rs  frontier.rs  mod.rs  smarts.rs  state.rs  task.rs
annotate/: Cargo.toml
browser-plugin/: package-lock.json  package.json  vue.config.js
browser-plugin/src/: manifest.json
browser-plugin/src/popup/: App.vue
calico_remote/: README.md
calico_remote/browser-plugin/: README.md  package-lock.json  package.json  vue.config.js
calico_remote/browser-plugin/src/: background.js
calico_remote/browser-plugin/src/options/: App.vue
calico_remote/browser-plugin/src/popup/: App.vue  main.js
calico_remote/crawler/: Cargo.toml  README.md  build.rs
calico_remote/crawler/src/: controller.rs  crawler.rs  fetch.rs  smarts.rs  state.rs
calico_remote/dexter/: Cargo.toml
calico_remote/dexter/src/: chat_ws.rs
calico_remote/dexter/src/api/: chat.rs
calico_remote/dexter/src/dexter/: mod.rs
calico_remote/dexter/src/inference/: huggingface.rs  openai.rs
calico_remote/docker/: docker-compose.yml
calico_remote/gadget/: README.md
calico_remote/gadget/www/src/: App.vue
calico_remote/lab/: README.md  environment.yml
calico_remote/lab/validate/: validate_torch.py
calico_remote/nimbus/: README.md  settings.gradle
calico_remote/nimbus/app/: build.gradle
calico_remote/parrot/: package.json  panulirus.ts
calico_remote/parrot/google/: .clasp.json  panulirus.js
calico_remote/pilot/src/: App.vue
calico_remote/pilot/src/components/: ChatBubble.vue  HelloWorld.vue
calico_remote/pilot/src/store/: app.ts
calico_remote/pilot/src/views/: Annotation.vue  Catalog.vue  Home.vue  Notifications.vue  People.vue
calico_remote/retrieve/: Cargo.toml  README.md
calico_remote/shared/: Cargo.toml
calico_remote/shared/src/: lib.rs  partition_stream.rs  types.rs
calico_remote/signal/: README.md
calico_remote/store/: Cargo.toml  build.rs
calico_remote/store/doc/: log.md  storage design.excalidraw
calico_remote/store/src/: blob.rs  cli.rs  datatypes.rs  lib.rs  load.rs  log.rs  partition.rs  protocol.proto  table.rs  writer.rs
calico_remote/store/src/datafusion/: mod.rs
calico_remote/store/src/datafusion/operation/: append.rs  mod.rs
crawler/src/: crawler.rs  store.rs  task.rs
dexter/: Cargo.toml  README.md
dexter/resources/test/inference/: openai_embedding_response.json
dexter/src/: chat.rs  dexter.rs  dexter_old.rs  main.rs
dexter/src/dexter/: mod.rs  settable.rs
dexter/src/inference/: hosted.rs  huggingface.rs  mod.rs  openai.rs
docker/: README.md  docker-compose.yml
gadget/: Cargo.toml
gadget/www/: package-lock.json  package.json  vue.config.js
lab/: README.md  environment.yml.1
lab/validate/: validate_tf.py
learn/: README.md
learn/extraction/: README.md
learn/jax/transformer/: README.md  learn.py  model.py  model_config.py  trainer.py
learn/labelify/: README.md  autolabel.py
learn/validate/: validate_jax.py
leetcode/regex/src/: main.rs
leetcode/roman_numerals/src/: main.rs
leetcode/two_sums/src/: main.rs
parrot/: README.md
parrot/google/: sidebar.html
pg/: README.md
pg/calico/: Cargo.toml
pg/calico/src/: blob.rs  lib.rs  load.rs  log.rs  partition.rs  stats.rs  table.rs  writer.rs
pg/calico/src/datafusion/: table.rs
pg/crawler/: Cargo.toml
pg/crawler/src/: lib.rs  telemetry.rs
pg/docker/: README.md  compose.yaml
pg/glimmer/: Cargo.toml  README.md  build.rs
pg/glimmer/src/: agent.rs  client.rs  glimmer_api.proto  lib.rs  registry.rs  server.rs
pg/heimdall/: Cargo.toml  README.md
pg/heimdall/src/: main.rs
pg/mephesto/: environment.yml
pg/porta/: Cargo.toml  build.rs
pg/porta/src/: api.rs  client.rs  porta_api.proto  server.rs
pg/porta/src/generators/: mod.rs
pg/porta/src/metrics/: mod.rs
pg/porta/src/metrics/auto/: mod.rs
pg/store/: 1744827744_global_column_registry.js  1744827841_global_dataset_registry.js  README.md  package-lock.json  package.json
pg/vera/: Cargo.toml  README.md  build.rs
pg/vera/src/: client.rs  config.rs  lib.rs  server.rs  vera_api.proto
pg/vera/src/service/: cql.rs  mod.rs  vera_service.rs
pg/vera/test/: test_config.rs
pg/vera/test/config/: basic_table.txtpb  basic_types.txtpb  basic_universe.txtpb
pilot/: README.md  index.html  package-lock.json  package.json
pilot/src/components/: ChatBox.vue  ChatBubble.vue
pilot/src/layouts/default/: AppBar.vue  Default.vue  NavBar.vue
pilot/src/router/: index.ts
pilot/src/store/: app.ts
pilot/src/views/: Chat.vue  Crawler.vue  Home.vue  Tasks.vue
shared/: Cargo.toml
shared/src/: lib.rs  partition_stream.rs
store/: Cargo.toml  README.md
store/src/: blob.rs  datatypes.rs  lib.rs  load.rs  log.rs  object.rs  operations.rs  partition.rs  protocol.proto  reader.rs  table.rs  writer.rs
store/src/datafusion/: table.rs
store/src/datafusion/operation/: append.rs
store/src/operation/: append.rs  mod.rs
tools/gadget/www/: package.json
tools/holoscope/: README.md  angular.json  package-lock.json  package.json
tools/holoscope/src/: index.html
tools/holoscope/src/app/: app.component.spec.ts  app.component.ts
tools/mote/: README.md  angular.json  package-lock.json  package.json  tsconfig.app.json
tools/mote/scripts/: generate-proto.ts
tools/mote/src/: background.ts  custom-webpack.config.ts  index.html  manifest.json
tools/mote/src/app/: app.component.html  app.component.spec.ts  app.component.ts
tools/mote/src/proto/: glimmer_api_grpc_pb.d.ts  glimmer_api_grpc_pb.js  glimmer_api_pb.d.ts  glimmer_api_pb.js
tools/parrot/google/: README.md
tools/pilot/src/store/: index.ts
tools/pilot/src/views/: Models.vue  Settings.vue
tools/studio/: README.md  angular.json  package-lock.json  package.json
tools/studio/src/: index.html
tools/studio/src/app/: app.component.ts  (+4 more)
util/dexter/: README.md
(+15 files in other folders)
