[package]
name = "acquisition"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crawler"
path = "src/crawler.rs"

[dependencies]
store = { path = "../store" }
calico-shared = { path = "../shared" }

async-trait = "0.1"
async-stream = "0.3"
clap = { version = "4.0", features = ["derive"] }
kv = "0.24"
futures = "0.3"
futures-util = "0.3"
itertools = "0.10"
num = "0.4"
object_store = "0.5.1"
ouroboros = "0.15"
prost = "0.11.0"
prost-types = "0.11.0"
rand = "0.8"
reqwest = "0.11"
result = "1"
robotstxt = "0.3"
rocksdb = { version = "0.19", features = ["multi-threaded-cf"] }
scraper = "0.14"
tempfile = "3.3"
tokio = { version = "1", features = ["full"] }
uuid = "1.2"


[dev-dependencies]
fs_extra = "1.2.0"
mockito = "0.31"

[build-dependencies]
prost-build = "0.11.0"
