[package]
name = "dexter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
derivative = "2"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
num = "0.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
yansi = "0.5"
warp = "0.3"
