[package]
name = "calico-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "24.0"
datafusion = { version = "13.0.0" }
kv = "0.24"
object_store = "0.5"
parquet = "24.0.0"
prost = "0.11.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
