[package]
name = "store"
version = "0.1.0"
edition = "2021"


[lib]
name = "storelib"
path = "src/lib.rs"

[[bin]]
name = "store-cli"
path = "src/cli.rs"

[[bin]]
name = "store-kafka-connector"
path = "src/kafka_connector.rs"

[dependencies]
itertools = "0.7.4"
arrow = "24.0"
async-trait = "0.1"
async-recursion = "1.0"
bytes = "1.2.1"
chrono = "0.4"
clap = { version = "3.0", features = ["derive"] }
datafusion = { version = "13.0.0" }
futures = "0.3"
hex = "0.4"
log = "0.4.17"
maplit = "1.0.2"
object_store = "0.5.1"
parquet = "24.0.0"
prost = "0.11.0"
prost-types = "0.11.0"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.2.0"

[build-dependencies]
prost-build = "0.11.0"

