[package]
name = "glimmer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "glimmer-server"
path = "src/server.rs"

[lib]
name = "glimmer"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
once_cell = "1.19"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1" }
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]] # Bin to run the Glimmer gRPC client
name = "glimmer-client"
path = "src/client.rs"
