[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
axum = "0.7"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.34", features = ["derive"] }
glimmer = { path = "../glimmer" }
deadpool = "0.10"
tonic = "0.11"
