[package]
name = "porta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.2"
clap = "4.0"
crossterm = "0.27"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
routerify = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termsize = "0.1"
textplots = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic = "0.11"
yansi = "1.0"


[build-dependencies]
tonic-build = "0.11"

[[bin]] # Bin to run the Porta gRPC server
name = "porta-server"
path = "src/server.rs"

[[bin]] # Bin to run the Porta gRPC client
name = "porta-client"
path = "src/client.rs"
