[package]
name = "vera"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11"
log = "0.4"
prost = "0.12"
prost-types = "0.12"
scylla = "0.15"
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]] # Bin to run the Vera gRPC server
name = "vera-server"
path = "src/server.rs"

[[bin]] # Bin to run the Vera gRPC client
name = "vera-client"
path = "src/client.rs"
