[package]
name = "vera"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11"
itertools = "0.14"
log = "0.4"
prost = "0.13"
prost-reflect = { version = "0.15", features = ["text-format"] }
prost-types = "0.13"
protobuf = "3.7"
scylla = "0.15"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[[bin]] # Bin to run the Vera gRPC server
name = "vera-server"
path = "src/server.rs"

[[bin]] # Bin to run the Vera gRPC client
name = "vera-client"
path = "src/client.rs"

[[bin]] # Bin to deploy textproto based configs to the server
name = "vera-config"
path = "src/config.rs"